I edit the tittle

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>My First Webpage</title>
+	<title>My First Webpage For Hng Task</title>
 </head>
 <body>
 <h1>First Web Page</h1>
